<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Erase SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_health_cold">Cold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <string name="bluetooth_is_discoverable_always">Visible to all nearby Bluetooth devices</string>
    <string name="bluetooth_not_visible_to_other_devices">Not visible to other Bluetooth devices</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_visibility_timeout">Visibility timeout</string>
    <string name="bluetooth_visibility_timeout_summary">Set how long device will be discoverable</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">Prevent use of the bluetooth dialer when the screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_device_details">Device settings</string>
    <string name="bluetooth_profile_details">Profile settings</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_rename_device">Rename phone</string>
    <string name="bluetooth_rename_button">Rename</string>
    <string name="bluetooth_disconnect_title">Disconnect?</string>
    <string name="bluetooth_disconnect_all_profiles">This will end your connection with:&lt;br>&lt;b>%1$s&lt;/b></string>
    <string name="bluetooth_disable_profile_title">Disable profile?</string>
    <string name="bluetooth_disable_profile_message">This will disable:&lt;br>&lt;b>%1$s&lt;/b>&lt;br>&lt;br>From:&lt;br>&lt;b>%2$s&lt;/b></string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_device">Unnamed Bluetooth device</string>
    <string name="progress_scanning">Searching</string>
    <string name="bluetooth_no_devices_found">No nearby Bluetooth devices were found.</string>
    <string name="proxy_settings_title">Proxy settings</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">Allow data exchange when the phone touches another device</string>
    <string name="android_beam_settings_title">Android Beam</string>
    <string name="nsd_quick_toggle_title">Network service discovery</string>
    <string name="nsd_quick_toggle_summary">Allow apps on other devices to discover apps on this device</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="wifi_poor_network_detection">Avoid poor connections</string>
    <string name="wifi_poor_network_detection_summary">"Don't use a Wi-Fi network unless it has a good Internet connection"</string>
    <string name="wifi_setting_sleep_policy_title">Keep Wi-Fi on during sleep</string>
    <string name="wifi_advanced_titlebar">Advanced Wi-Fi</string>
    <string name="wifi_setting_frequency_band_title">Wi-Fi frequency band</string>
    <string name="wifi_setting_frequency_band_summary">Specify the frequency range of operation</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_advanced_ip_address_title">IP address</string>
    <string name="sound_settings">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="all_volume_title">Volumes</string>
    <string name="musicfx_title">Music effects</string>
    <string name="notification_sound_title">Default notification</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_sound_dialog_title">Choose notification ringtone</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="vibrate_when_ringing_title">Vibrate when ringing</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="screensaver_settings_title">Screen Candy</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="tether_settings_title_all">Tethering &amp; portable hotspot</string>
    <string name="network_settings_title">Mobile networks</string>
    <string name="vpn_settings_title">VPN</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="sound_category_call_ringtone_vibrate_title">Call ringtone &amp; vibrate</string>
    <string name="sound_category_system_title">System</string>
    <string name="wimax_settings">4G settings</string>
    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
    <string name="cell_broadcast_settings">Cell broadcasts</string>
    <string name="cell_broadcast_settings_summary">Select the types of emergency alerts to display.</string>
</resources>